# tictactoe_Chau_Fung

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: conf.py  index.rst
src/tictactoe_fc2786/: __init__.py  tictactoe_fc2786.py
tests/: test_tictactoe_fc2786.py
